--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MCV4U_Problem_Set_Generator
 excludes=
+file.reference.VMath.jar=lib\\VMath.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.VMath.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
